单边递归,Unilateral recursive

--- a/Internet_of_Things/.vscode/settings.json
+++ b/Internet_of_Things/.vscode/settings.json
@@ -73,7 +73,11 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "any": "cpp",
+        "unordered_set": "cpp",
+        "typeindex": "cpp",
+        "variant": "cpp"
     },
     "editor.fontFamily": "Fira Code",
     "cmake.configureOnOpen": true
